Create solution and test projects